--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   You can contact us through our contacts:
   <a href="#" onclick="contactOmegaEmail(event)">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_(2020).svg/32px-Gmail_icon_(2020).svg.png" alt="Gmail" style="height:14px; vertical-align:middle; margin-right:4px;">
-    muhumuzaomega@gmail.com
+    2024omd256@gmail.com
   </a>:
   <a href="https://wa.me/256763956608" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="height:20px; vertical-align:middle; margin-right:4px;">
@@ -203,19 +203,22 @@
     <div class="content">
         <section class="features">
             <h2>Features</h2>
-                <li>Interactive tutorials</li>
+                <li>Adaptive learning with AI assistance</li>
+                <li>Step-by-step interactive tutorials</li>
                 <li>Easy-to-follow instructions</li>
-                <li>Free to download and use</li>
-                <li>Completely Free - no spyware, no ads, and no user tracking</li>
-                <li>Works mostly offline after installation</li>
+                <li>Works mostly offline after setup</li>
+                <li>Completely free to download and use</li>
+                <li>No spyware, no ads, and no user tracking</li>
             </ul>
         </section>
         <section class="support">
             <h2>Support</h2>
-                <li>Share the pipeline with your friends and colleagues</li>
+                <li>Collaborate on GitHub to improve the code</li>
+                <li>Share the pipeline with your colleagues</li>
                 <li>Contribute tutorials and resources</li>
+                <li>Review and improve the available content</li>
                 <li>Provide feedback to improve our platform</li>
-                <li>Make a donation. Kindly contact us via our contacts above to make a donation. Thank you</li>
+                <li>Contact us to make a donation - Thank you</li>
             </ul>
         </section>
     </div>
@@ -224,8 +227,8 @@
   <div style="text-align: center; margin-bottom: 15px;">
     <label for="subjectSelect"><strong>Selected Items:</strong></label>
 <select id="levelSelect" onchange="fetchContent()" style="padding: 5px 10px; font-size: 16px;">
-  <option value="O">O'Level</option>
-  <option value="A">A'Level</option>
+  <option value="O">O-Level</option>
+  <option value="A">A-Level</option>
 </select>
 <select id="subjectSelect" onchange="fetchContent()" style="padding: 5px 10px; font-size: 16px; margin-left: 10px;">
   <option value="">-- Choose a subject --</option>
@@ -567,7 +570,7 @@ function shareWithUs() {
 function contactOmegaEmail(event) {
     event.preventDefault(); // ⛔ prevent scrolling to the top
 
-    const email = "muhumuzaomega@gmail.com";
+    const email = "2024omd256@gmail.com";
     const gmailLink = `https://mail.google.com/mail/?view=cm&to=${email}`;
     const mailtoLink = `mailto:${email}`;
 
