--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </ul>
         </section>
     </div>
-    <div class="footer">&copy; 2025 Your Trusted Learning Platform. All rights reserved.</div>
+    <div class="footer">&copy; 2025 OMD | The Educational Pipeline</div>
 <div style="margin-top: 30px; padding: 20px; border: 2px solid #ccc; border-radius: 10px; max-width: 1000px; margin-left: auto; margin-right: auto; background: #f9f9f9;">
   <div style="text-align: center; margin-bottom: 15px;">
     <label for="subjectSelect"><strong>Selected Items:</strong></label>
@@ -674,6 +674,6 @@ function openCommunication() {
     Follow OMD on WhatsApp
   </a>
 </p>
-    <div class="footer">&copy; 2025 Your Trusted Learning Platform. All rights reserved.</div>
+    <div class="footer">&copy; 2025 OMD | The Educational Pipeline</div>
 </body>
 </html>
